--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 app.secret=CHANGE_ME
-app.email.from=rovol@ukr.net
-app.email.support=rovol@ukr.net
+app.email.from=admin@localhost
+app.email.support=admin@localhost
 app.url=http://localhost:8080/JTutorSB
 app.user.root=users/
 #Set this following to true if you want to verify email address on new user registrations
@@ -26,8 +26,8 @@ security.basic.enabled=false
 
 # Email (MailProperties)
 spring.mail.host=smtp.gmail.com
-spring.mail.username=vita.dobrovolskaya@gmail.com
-spring.mail.password=gfhfljrc76
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.ssl.enable = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
