--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1</version>
 	<packaging>war</packaging>
 
-	<name>JTutorSB</name>
+	<name>JTutor</name>
 	<description>JTutor</description>
 
 	<parent>
