--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ logging.file=myapp.log
 logging.level.org.springframework.jdbc=DEBUG
 #logging.level.=DEBUG
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:./mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:~/JTutorServer/mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
