Lectures with HTML tags are able now

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ app.environment=DEV
 spring.thymeleaf.mode=HTML5
 # LOGGING
 #logging.path=/var/logs
-logging.file=myapp.log
+logging.file=JTutorServer/myapp.log
 logging.level.org.springframework.jdbc=DEBUG
 #logging.level.=DEBUG
 spring.datasource.driver-class-name=org.h2.Driver
