--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,17 @@ app.environment=DEV
 spring.thymeleaf.mode=HTML5
 # LOGGING
 #logging.path=/var/logs
-logging.file=~/JTutorServer/myapp.log
+logging.file=JTutorServer/myapp.log
 logging.level.org.springframework.jdbc=DEBUG
 #logging.level.=DEBUG
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/JTutorServer/mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.thymeleaf.cache=false
