--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ app.environment=DEV
 spring.thymeleaf.mode=HTML5
 # LOGGING
 #logging.path=/var/logs
-logging.file=JTutorServer/myapp.log
+logging.file=myapp.log
 logging.level.org.springframework.jdbc=DEBUG
 #logging.level.=DEBUG
 spring.datasource.url=${JDBC_DATABASE_URL}
@@ -21,7 +21,7 @@ spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.thymeleaf.cache=false
