--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.thymeleaf.mode=HTML5
 logging.file=myapp.log
 logging.level.org.springframework.jdbc=DEBUG
 #logging.level.=DEBUG
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/jtutor
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
@@ -40,4 +40,4 @@ spring.mail.default-encoding=UTF-8
 #spring.mail.properties.*= # properties to set on the JavaMail session
 
 multipart.maxFileSize = 20Mb
-multipart.maxRequestSize = 20Mb
+multipart.maxRequestSize = 20Mbz
