corrected grammatical errors in ValidationMessages

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -2,5 +2,5 @@ javax.validation.constraints.Pattern.message = You are using banned symbols.
 javax.validation.constraints.Size.message = Size must be between {min} and {max}.
 org.hibernate.validator.constraints.Email.message = Email address is not valid.
 
-username.size = Username must at least 3 characters.
-password.size = Password must at least 3 characters.
+username.size = Username must be at least 3 characters.
+password.size = Password must be at least 3 characters.
