--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.thymeleaf.mode=HTML5
 logging.file=myapp.log
 logging.level.org.springframework.jdbc=DEBUG
 #logging.level.=DEBUG
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/jtutor
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
@@ -26,6 +26,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.thymeleaf.cache=false
 security.basic.enabled=false
+
+spring.messages.basename=locale/messages
 
 # Email (MailProperties)
 spring.mail.host=smtp.gmail.com
